adding gestion mps

--- a/views/index.html
+++ b/views/index.html
@@ -12,10 +12,15 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 <body>
-<div class="container">
-<h3 class=" text-center">Bienvenue sur MSN !</h3>
-<input type="text" id="nickname"/>
+<div id="inputDiv" class="input-group mb-3">
+    <div class="input-group-prepend">
+        <span class="input-group-text" id="inputGroup-sizing-default">Nom</span>
+    </div>
+    <input id="nickname" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+</div>
 <button id="nickBtn" send style="display: none;"></button>
+<div id="container" class="container" style="display: none;">
+<h3 class=" text-center">Bienvenue sur MSN !</h3>
 <div class="messaging">
       <div class="inbox_msg">
         <div class="inbox_people">
@@ -37,15 +42,15 @@
                 </div>
             </div>
         </div>
-        <div class="mesgs">
-          <div id="messagesDiv" class="msg_history">
-          </div>
-          <div class="type_msg">
-            <div class="input_msg_write">
-              <input type="text" id="messageInput" class="write_msg" placeholder="Type a message" />
-              <button id="submitBtn" send class="msg_send_btn"><i class="fa fa-paper-plane-o" aria-hidden="true"></i></button>
+        <div id="allMessagesConv" class="mesgs">
+            <div id="messagesDiv" class="msg_history">
             </div>
-          </div>
+            <div class="type_msg">
+                <div class="input_msg_write">
+                    <input type="text" id="messageInput" class="write_msg" placeholder="Type a message" />
+                    <button id="submitBtn" send class="msg_send_btn"><i class="fa fa-paper-plane-o" aria-hidden="true"></i></button>
+                </div>
+            </div>
         </div>
       </div>
     </div></div>
@@ -61,15 +66,23 @@
         var nickname = document.getElementById('nickname');
         var nickBtn = document.getElementById('nickBtn');
         var chatItem = document.getElementById('chatItem');
+        var container = document.getElementById('container');
+        var inputDiv = document.getElementById('inputDiv');
+        var allMessagesDivs = document.getElementById('allMessagesConv');
 
         var date = new Date();
-        
+
+        localUsers = {};
+
+        nickname.focus();
+              
         nickname.addEventListener('keyup', (event) => {
             event.preventDefault();
             if(event.keyCode === 13)
             {
                 nickBtn.click();
-                nickname.style.display = 'none';
+                inputDiv.style.display = 'none';
+                container.style.display = 'block';
                 messageInput.focus();
                 console.log(socket.id + nickname.value);
                 socket.emit('username', nickname.value);
@@ -84,70 +97,112 @@
     
         var socket = io();
     
-        var senderID = '';
+        var senderID = null;
 
         submitBtn.addEventListener('click', () => {
-            console.log(senderID);
+            console.log('send to ', senderID);
             socket.emit('message', { color: color, id: socket.id, nick: nickname.value, message: messageInput.value, sender: senderID });
 
-            messagesDiv.innerHTML += '<div class="outgoing_msg"><div class="sent_msg"><h6>' + nickname.value + '</h6><p style="background-color: ' + color + ';">' + messageInput.value + '</p><span class="time_date">' + date.getHours() + ':' + date.getMinutes() + '</span></div></div>';;
+            //messagesDiv.innerHTML += '<div class="outgoing_msg"><div class="sent_msg"><h6>' + nickname.value + '</h6><p style="background-color: ' + color + ';">' + messageInput.value + '</p><span class="time_date">' + date.getHours() + ':' + date.getMinutes() + '</span></div></div>';;
+
+            if(senderID != null)
+            {
+                messagesDiv.innerHTML += '<div class="outgoing_msg"><div class="sent_msg"><h6><i>' + nickname.value + '(chuchote à ' + localUsers[senderID] + ')</i></h6><p style="background-color: ' + color + ';"><i>' + messageInput.value + '</i></p><span class="time_date">' + date.getHours() + ':' + date.getMinutes() + '</span></div></div>';
+            }
+            else
+            {
+                messagesDiv.innerHTML += '<div class="outgoing_msg"><div class="sent_msg"><h6>' + nickname.value + '</h6><p style="background-color: ' + color + ';"><i>' + messageInput.value + '</i></p><span class="time_date">' + date.getHours() + ':' + date.getMinutes() + '</span></div></div>';
+            }
 
             messageInput.value = '';
+
+            senderID = null;
         });
     
         
         socket.on('message', data => {
             console.log('message received: ', data);
 
-            var incomingMessage = '<div class="incoming_msg"><div class="received_msg"><div class="received_withd_msg"><h6>' + data.nick + '</h6><p style="background-color: ' + data.color + '; color: #FFF;">' + data.message + '</p><span class="time_date">' + date.getHours() + ':' + date.getMinutes() + '</span></div></div></div>';
-            var outcomingMessage = '<div class="outgoing_msg"><div class="sent_msg"><h6>' + nickname.value + '</h6><p style="background-color: ' + color + ';">' + messageInput.value + '</p><span class="time_date">' + date.getHours() + ':' + date.getMinutes() + '</span></div></div>';
+            date = new Date();
 
-            if(!(socket.id === data.id))
+            console.log('merde', senderID);
+
+            if(data.sender != null)
+            {
+                var incomingMessage = '<div class="incoming_msg"><div class="received_msg"><div class="received_withd_msg"><h6><i>' + data.nick + ' vous chuchote</i></h6><p style="background-color: ' + data.color + '; color: #FFF;">' + data.message + '</p><span class="time_date">' + date.getHours() + ':' + date.getMinutes() + '</span></div></div></div>';
+                var outcomingMessage = '<div class="outgoing_msg"><div class="sent_msg"><h6><i>' + nickname.value + '(chuchote à ' + localUsers[senderID] + ')</i></h6><p style="background-color: ' + color + ';"><i>' + messageInput.value + '</i></p><span class="time_date">' + date.getHours() + ':' + date.getMinutes() + '</span></div></div>';
+            }
+            else
+            {
+                var incomingMessage = '<div class="incoming_msg"><div class="received_msg"><div class="received_withd_msg"><h6>' + data.nick + '</h6><p style="background-color: ' + data.color + '; color: #FFF;"><i>' + data.message + '</i></p><span class="time_date">' + date.getHours() + ':' + date.getMinutes() + '</span></div></div></div>';
+                var outcomingMessage = '<div class="outgoing_msg"><div class="sent_msg"><h6>' + nickname.value + '</h6><p style="background-color: ' + color + ';"><i>' + messageInput.value + '</i></p><span class="time_date">' + date.getHours() + ':' + date.getMinutes() + '</span></div></div>';
+            }
+
+            if(socket.id !== data.id)
             {
                 messagesDiv.innerHTML += incomingMessage;
             }
             else{
                 messagesDiv.innerHTML += outcomingMessage;
             }
+
+
         });
 
         socket.on('users', users => {
             document.getElementById('userName').innerHTML = 'Bienvenue ' + users[socket.id]; 
             chatItem.innerHTML = '<div id="chatItemAll" class="chat_list active_chat"><div class="chat_people"><div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil"></div><div class="chat_ib"><h5>Chat All <span id="chatAllDate" class="chat_date">Dec 25</span></h5><p id="chatAll"></p></div></div></div>';
-            
-            document.getElementById('chatItemAll').addEventListener('click', () => {
-                console.log('issou');
-                messagesDiv.style.display = 'inline';
-            });
 
-            console.log(users.allUsers);
+            localUsers = users;
+
+            console.log("userlist: ",users.allUsers);
 
             Object.keys(users).forEach((userId) => {
                 if(userId !== socket.id) 
                 {
-                    var lol = '<div class="chat_list socket"><div class="chat_people"><div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil"></div><div class="chat_ib"><h5>' +  users[userId] + ' <span id="chatDate" class="chat_date">Dec 25</span></h5><p id="chatAll"></p></div></div></div>';
+                    var lol = '<div class="chat_list" socketid="' + userId + '"><div class="chat_people"><div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil"></div><div class="chat_ib"><h5>' +  users[userId] + ' <span id="chatDate" class="chat_date">Dec 25</span></h5><p id="chatAll"></p></div></div></div>';
                     chatItem.innerHTML += lol;
 
-                    senderID = userId;
+                    //senderID = userId;
                 }
             });
 
-            /*for(var j = 0; j < document.getElementsByClassName("socket").length; j++)
-            {
-                document.getElementsByClassName("socket").addEventListener('click', () => {
-                    for(var i = 0; i < document.getElementsByClassName("active_chat"); i++)
-                    {
-                        document.getElementsByClassName("active_chat")[i].remove("active_chat");
-                    }
-                    document.getElementsByClassName("socket")[j].classList.add("active_chat");
+            [].forEach.call(document.querySelectorAll('div.chat_list'), function(el) {
+                el.addEventListener('click', () => {
+                    
+                    [].forEach.call(document.querySelectorAll('div.active_chat'), function(elem) {
+                        elem.classList.remove('active_chat');
+                    });
+
+                    el.classList.add('active_chat');
+                    
+                    console.log("sockt ", el.getAttribute('socketId'));
+
+                    senderID = el.getAttribute('socketId');
+
+                    pvMessagesDiv = '<div class="msg_history" socketid="' + el.getAttribute('socketId') + '"></div>';
+
+                    console.log('ok');
                 });
-            }*/
+            });
         });
 
         socket.emit('loaded', 'page loaded!!');
     </script>
 
     </html>
+
+
+
+
+
+
+
+
+
+
+
+
 
 <style>
 .container{max-width:1170px; margin:auto;}
